--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Pluralsight Administration</title>
+    <title>React Flux Awesome Dota2 Hero Selector</title>
     <link rel="stylesheet" href="css/bundle.css" />
   </head>
   <body>
